sunuo (0.1.6) unstable; urgency=low

  * introduce the "path" element in the library configuration, allowing
    the administrator to specify arbitrary source paths
  * dependencies for libraries

 --

sunuo (0.1.5) unstable; urgency=low

  * now really fixed a null cast in ScriptCompiler.CheckStamps()

 -- Max Kellermann <max@duempel.org>  Thu, 10 Mar 2005 21:48:12 +0100

sunuo (0.1.4) unstable; urgency=low

  * fixed a lot of C# compiler warnings
  * workaround for the RunUO faction bug: Reflection.cs assumes
    alphabetically sorted directory entries; ScriptCompiler.cs now sorts
    filenames before passing them to the compiler
  * fixed a null cast in ScriptCompiler.CheckStamps()

 -- Max Kellermann <max@duempel.org>  Thu,  3 Mar 2005 21:04:41 +0100

sunuo (0.1.3) unstable; urgency=low

  * work around mono-mcs 1.1.4 bug #72771: "Response file specified
    multiple times"
  * removed "/debug /optimize" parameters from ScriptCompiler
  * added a hack to work around the zlib portability bugs in the scripts

 -- Max Kellermann <max@duempel.org>  Sun, 20 Feb 2005 19:53:46 +0100

sunuo (0.1.2) unstable; urgency=low

  * another Mono bug workaround: pointer increments are 8 byte aligned,
    although Pack=1 is specified in the structure
  * exit on compiler error, don't allow the user to retry compilation
  * added BINFMT_MISC instructions, thanks to Wulf Krueger
  * added Mono 1.1 installation instructions

 -- Max Kellermann <max@duempel.org>  Wed, 16 Feb 2005 23:20:34 +0100

sunuo (0.1.1) unstable; urgency=low

  * show operating system and runtime version in start banner
  * removed several compatibility fixes for old pre-0.1.0 versions of
    SunUO
  * recompile libraries automatically when a file has been changed,
    deleted or added added
  * added documentation for [restart workaround

 -- Max Kellermann <max@duempel.org>  Mon, 14 Feb 2005 22:40:42 +0100

sunuo (0.1.0) unstable; urgency=low

  * imported RunUO 1.0.0 sources, fork is called SunUO 0.1.0