@@ -180,6 +180,24 @@ If you do not use the "<depends/>" elemnt, libraries are loaded in
 random order.
 
 
+** Overlay libraries **
+
+To configure RunUO, you need to edit the original RunUO scripts
+(./Scripts/) often. However, for easier upgrades, it is better to move
+edited files over to another library and simply replace the files in
+./Scripts/ - this method is called "overlay":
+
+ <libraries>
+   <library name="legacy">
+     <overlay name="bar"/>
+   </library>
+   <library name="bar"/>
+ </libraries>
+
+Now you can edit the file "./local/src/bar/Misc/ServerList.cs", which
+is then used instead of "./Scripts/Misc/ServerList.cs".
+
+
 ** Load scripts from another path **
 
 You can specify an arbitrary path where SunUO should compile sources
